Resolução de alguns bugs na testapp e alteração de return em funções do FIFI.c

--- a/latex/testapp_8c.tex
+++ b/latex/testapp_8c.tex
@@ -12,7 +12,7 @@ Include dependency graph for testapp.\+c\+:
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
-void \mbox{\hyperlink{testapp_8c_acdef7a1fd863a6d3770c1268cb06add3}{main}} ()
+int \mbox{\hyperlink{testapp_8c_a840291bc02cba5474a4cb46a9b9566fe}{main}} (void)
 \begin{DoxyCompactList}\small\item\em Função que propõe opções de ações que o utilizador pode efetuar para testar o \mbox{\hyperlink{structFIFO}{F\+I\+FO}}. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
@@ -25,18 +25,18 @@ Neste aplicação temos um menu de opções a que o utilizador pode recorrer par
 Rodolfo Oliveira, Nº\+Mec\+: 88919 
 \end{DoxyAuthor}
 \begin{DoxyDate}{Date}
-14 Março 2023 
+14 Março 2023
 \end{DoxyDate}
 \begin{DoxyRefDesc}{Bug}
-\item[\mbox{\hyperlink{bug__bug000002}{Bug}}]Imprime no terminal \char`\"{}\+Nova ação\+: E\+R\+R\+O\char`\"{} logo após ser executada uma ação e sem que se tenha clicado em alguma tecla para definar uma ação.\end{DoxyRefDesc}
+\item[\mbox{\hyperlink{bug__bug000003}{Bug}}]Nenhum bug conhecido\end{DoxyRefDesc}
 
 
 \doxysubsection{Function Documentation}
-\mbox{\Hypertarget{testapp_8c_acdef7a1fd863a6d3770c1268cb06add3}\label{testapp_8c_acdef7a1fd863a6d3770c1268cb06add3}} 
+\mbox{\Hypertarget{testapp_8c_a840291bc02cba5474a4cb46a9b9566fe}\label{testapp_8c_a840291bc02cba5474a4cb46a9b9566fe}} 
 \index{testapp.c@{testapp.c}!main@{main}}
 \index{main@{main}!testapp.c@{testapp.c}}
 \doxysubsubsection{\texorpdfstring{main()}{main()}}
-{\footnotesize\ttfamily void main (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily int main (\begin{DoxyParamCaption}\item[{void}]{ }\end{DoxyParamCaption})}
 
 
 
@@ -45,5 +45,5 @@ Função que propõe opções de ações que o utilizador pode efetuar para test
 Menu de opçoes a que o utilizador pode recorrer para a testagem das funcionalidades implementadas para o \mbox{\hyperlink{structFIFO}{F\+I\+FO}}. Por exemplo, Inserção de elementos, remoção de elementos, Print do elemento inserido há mais tempo, Número total de elementos e print do conteúdo do \mbox{\hyperlink{structFIFO}{F\+I\+FO}}.
 
 \begin{DoxyReturn}{Returns}
-sempre retorna strings 
+sempre retorna 0 
 \end{DoxyReturn}
