--- a/latex/bug.tex
+++ b/latex/bug.tex
@@ -1,6 +1,9 @@
 
 \begin{DoxyRefList}
-\item[File \mbox{\hyperlink{testapp_8c}{testapp.c}} ]\label{bug__bug000002}%
+\item[Global \mbox{\hyperlink{FIFO_8h_a9361e817f419f9122ff4e25a0f3b6df1}{My\+F\+I\+F\+O\+Peep}} (\mbox{\hyperlink{structFIFO}{F\+I\+FO}} nome)]\label{bug__bug000002}%
 \Hypertarget{bug__bug000002}%
-Imprime no terminal \char`\"{}\+Nova ação\+: E\+R\+R\+O\char`\"{} logo após ser executada uma ação e sem que se tenha clicado em alguma tecla para definar uma ação.
+se o \mbox{\hyperlink{structFIFO}{F\+I\+FO}} estiver vaizo retorna 0 mas se o último elemento inserido for 0 também retorna 0  
+\item[File \mbox{\hyperlink{testapp_8c}{testapp.c}} ]\label{bug__bug000003}%
+\Hypertarget{bug__bug000003}%
+Nenhum bug conhecido
 \end{DoxyRefList}
